--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,15 @@ spring.application.name=chatcord.server
 
 spring.application.udp.server.port = 9876
 spring.application.udp.server.ip = localhost
+
+# MySQL Database Configurations
+spring.datasource.url=jdbc:mysql://localhost:3306/chatcorddb
+spring.datasource.username=root
+spring.datasource.password=Aa123
+
+# Optional: show SQL in console
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
