--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.mail.username=dev.chatcord@gmail.com
 spring.mail.password=azaotyaqilurmycw
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+file.upload-dir=files/uploads
+file.download-dir=files/downloads
