--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,10 @@ spring.application.udp.server.port = 9876
 spring.application.udp.server.ip = localhost
 
 # MySQL Database Configurations
-spring.datasource.url=jdbc:mysql://localhost:3306/chatcorddb
+spring.datasource.url=jdbc:mysql://chatbord-db.joharji1.sa:3306/chatcorddb
 spring.datasource.username=root
-spring.datasource.password=Aa123
+spring.datasource.password=chatcord_admin_admin_][;
+#spring.datasource.password=chatcord_admin_admin_][;
 
 # Optional: show SQL in console
 spring.jpa.show-sql=true
