--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,7 @@
-spring.application.name=chatcord.server
+spring.application.name=Chatcord
 
 spring.application.udp.server.port = 9876
 spring.application.udp.server.ip = localhost
-
-# MySQL Database Configurations
-spring.datasource.url=jdbc:mysql://localhost:3306/chatcorddb
-spring.datasource.username=root
-spring.datasource.password=Aa123
-#spring.datasource.password=chatcord_admin_admin_][;
-
-# Optional: show SQL in console
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 logging.level.org.springframework.security=DEBUG
 
@@ -26,3 +14,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 file.upload-dir=files/uploads
 file.download-dir=files/downloads
+
+spring.profiles.active=dev
