--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,11 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 file.upload-dir=files/uploads
 file.download-dir=files/downloads
 
+# Redis properties
+spring.redis.host=localhost
+spring.redis.port=6379
+
+vault.url=http://localhost:8300
+vault.token=myroot
+
 spring.profiles.active=dev
