--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ vault.url=http://localhost:8300
 vault.token=myroot
 
 spring.profiles.active=dev
+
+application.chatcord.server.url = http://localhost:8080
