--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,12 +1,40 @@
-# MySQL Database Configurations
-spring.datasource.url=jdbc:mysql://localhost:3306/chatcorddb
-spring.datasource.username=root
-spring.datasource.password=Aa123
-#spring.datasource.password=chatcord_admin_admin_][;
 
-# Optional: show SQL in console
+#Microsoft Sql Server
+#Server=localhost\SQLEXPRESS;Database=master;Trusted_Connection=True;
+
+
+## MySQL Database Configurations
+#spring.datasource.url=jdbc:mysql://localhost:3306/chatcorddb
+#spring.datasource.username=root
+#spring.datasource.password=Aa123
+##spring.datasource.password=chatcord_admin_admin_][;
+#
+## Optional: show SQL in console
+#spring.jpa.show-sql=true
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#
+## Microsoft SQL EXPRESS SERVER Database Configurations
+#spring.datasource.url=jdbc:mysql://localhost:SQLEXPRESS/chatcorddb
+#spring.datasource.username=root
+#spring.datasource.password=Aa123
+##spring.datasource.password=chatcord_admin_admin_][;
+#
+## Optional: show SQL in console
+#spring.jpa.show-sql=true
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.datasource.url=jdbc:sqlserver://localhost:1433;instanceName=SQLEXPRESS;databaseName=ChatcordDB;encrypt=false
+spring.datasource.username=dev
+spring.datasource.password=Aa123
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+# Optional Hibernate settings
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 
